--- a/PracticasProfesionalesPF/config/db_config.properties
+++ b/PracticasProfesionalesPF/config/db_config.properties
@@ -1,6 +1,6 @@
 #Database settings
-db.url=jdbc:mysql://localhost:3306/professional_practices?allowPublicKeyRetrieval=true&useSSL=false
-db.user=pp_admin
-db.password=Ppsyst3m!
+db.url=YOUR_URL
+db.user=YOUR_USER
+db.password=YOUR_PASSWORD
 
 
